name:                eta-access
version:             0.0.1-SNAPSHOT
license:             AllRightsReserved
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src/main/eta
  default-language:    Haskell2010
  exposed-modules:
    Access
    Examples
  default-extensions:
    DataKinds
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MagicHash
    MultiParamTypeClasses
    NoImplicitPrelude
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TypeFamilies
    TypeOperators
    UnboxedTuples